# OpenAspen

./: .gitignore  README.md  conftest.py  debug_adjust.py  debug_test.py  demo.py  demo_thermo.py  pyproject.toml  pytest.ini  requirements.txt  test_import.py
docs/: DWSIM5_Architecture_Diagram.md  DWSIM5_FlowsheetSolver_技术文档.md  DWSIM5_FlowsheetSolver_技术文档_增强版.md  DWSIM5_PropertyData_Storage.md  DWSIM5_PropertyPackages_Analysis.md  DWSIM5_Python_Reimplementation_Plan.md  DWSIM_FINAL_IMPLEMENTATION_REPORT.md  DWSIM_IMPLEMENTATION_COMPLETION_REPORT.md  DWSIM_MISSING_FUNCTIONALITY_ANALYSIS.md  FLASH_ALGORITHMS_PERFORMANCE_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md
dwsim_core/: __init__.py
dwsim_core/exceptions/: __init__.py  convergence_errors.py  thermodynamic_errors.py
dwsim_core/interfaces/: __init__.py  base_interfaces.py
dwsim_core/utilities/: __init__.py  constants.py  math_utils.py  unit_converter.py
dwsim_data/: __init__.py
dwsim_data/assets/databases/: dwsim_components.json
dwsim_math/: README.md  __init__.py  requirements.txt
dwsim_math/core/: __init__.py  general.py  interpolation.py  matrix_ops.py
dwsim_math/docs/: ALGORITHMS.md  EXAMPLES.md  PROJECT_SUMMARY.md
dwsim_math/numerics/: __init__.py  complex_number.py
dwsim_math/optimization/: __init__.py  lbfgs.py
dwsim_math/random/: __init__.py  mersenne_twister.py
dwsim_math/solvers/: __init__.py  brent.py
dwsim_math/tests/: test_all.py
dwsim_operations/: README.md  __init__.py  base_classes.py  integration.py  unit_operations.py
dwsim_thermo/core/: compound.py  database.py  enums.py  phase.py  property_package.py  property_package_extended.py
dwsim_thermo/databases/: __init__.py
dwsim_thermo/docs/: ACTIVITY_COEFFICIENT_MODELS_ENHANCED.md  DWSIM_COMPLETE_ALGORITHMS_REFERENCE.md  DWSIM_COMPREHENSIVE_CONVERSION_FINAL_REPORT.md  DWSIM_CONVERSION_GAP_ANALYSIS.md  DWSIM_THERMODYNAMICS_ALGORITHMS.md  DWSIM_Thermodynamics_Algorithm_Analysis.md  DWSIM_Thermodynamics_Call_Sequence_Diagrams.md  DWSIM_Thermodynamics_Complete_Diagrams.md  DWSIM_Thermodynamics_System_Architecture.md  EOS_CUBIC_EQUATIONS.md  README.md
dwsim_thermo/flash_algorithms/: __init__.py  base_flash.py  gibbs_minimization.py  inside_out.py  nested_loops.py  simple_lle.py  solid_liquid_equilibrium.py  stability_analysis.py  three_phase_flash.py
dwsim_thermo/property_packages/: __init__.py  chao_seader.py  grayson_streed.py  ideal.py  lee_kesler_plocker.py  peng_robinson.py  peng_robinson_stryjek_vera.py  soave_redlich_kwong.py
dwsim_thermo/property_packages/activity_packages/: __init__.py  electrolyte_nrtl.py  nrtl.py  unifac.py  uniquac.py  wilson.py
dwsim_thermo/property_packages/eos_packages/: __init__.py  lee_kesler_plocker.py  pc_saft.py  peng_robinson_stryjek_vera.py
dwsim_thermo/property_packages/specialized/: __init__.py  black_oil.py  coolprop_interface.py  seawater.py  sour_water.py  steam_tables.py
examples/: integrated_solver_example.py
flowsheet_solver/: README.md  __init__.py  calculation_args.py  convergence_solver.py  solver.py  solver_exceptions.py
flowsheet_solver/remote_solvers/: __init__.py  azure_solver_client.py  tcp_solver_client.py
tests/: INTEGRATION_SUMMARY.md  PYTEST_GUIDE.md  README.md  README_UNIFIED.md  REORGANIZATION_SUMMARY.md  __init__.py  conftest.py  pytest.ini  run_unified_pytest.py  test_dwsim_math.py  test_dwsim_math_suite.py
tests/docs/: DEVELOPMENT.md  USAGE.md
tests/dwsim_math/: __init__.py  test_core_general.py  test_core_interpolation.py  test_core_matrix_ops.py  test_final.py  test_numerics_complex.py  test_optimization_lbfgs.py  test_random_mersenne.py  test_solvers_brent.py  test_utils.py
tests/integration/: test_solver_integration.py
tests/legacy/: README.md
tests/legacy/pytest_old/performance/: test_performance_benchmarks.py
tests/legacy/runners/: run_all_dwsim_tests.py  run_pytest_dwsim.py  run_tests.py
tests/legacy/unittest/unit/: TEST_COVERAGE_SUMMARY.md  test_convergence_solver.py  test_dwsim_operations.py  test_dwsim_operations_pytest.py  test_dwsim_unit_operations_comprehensive.py  test_flowsheet_solver.py  test_remote_solvers.py  test_solver_exceptions.py  test_specific_operations_pytest.py  test_specific_unit_operations.py
tests/test_core/: __init__.py  test_unit_converter.py
tests/unified/: conftest_dwsim.py  test_dwsim_unified.py
tests/unit/: test_calculation_args.py
